# gemini-comic-creator-app

./: Dockerfile  Makefile  README.md  app.py  check_env.py  logic.py  pyproject.toml  requirements.txt  theme.py  verifier.py
solutions/: logic_complete.py
solutions/chapter1/: logic.py
solutions/chapter2/: logic.py
solutions/chapter3/: logic.py
solutions/chapter4/: logic.py
solutions/chapter5/: logic.py
solutions/chapter6/: logic.py
solutions/final/: app.py
tests/: test_app_launch.py  test_app_logic.py  test_chapter2_logic.py  test_chapter2_verifier.py  test_logic.py  test_solution_chapter1.py  test_theme.py  test_verifier.py
